--- a/app/src/main/res/layout/layout_row_view.xml
+++ b/app/src/main/res/layout/layout_row_view.xml
@@ -1,44 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingEnd="2sp"
+    android:paddingLeft="5sp"
+    android:paddingRight="2sp"
+    android:paddingStart="5sp"
     >
 
-    <TextView
-        android:id="@+id/textViewVendorName"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
-        tools:text="TextView"
-        android:gravity="center"/>
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewOdd1"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/textViewVendorName"
-        android:textAppearance="?android:textAppearanceMedium"
-        tools:text="TextView"
-        android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/title_contendentHome"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            />
 
-    <TextView
-        android:id="@+id/textViewOddX"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
-        tools:text="TextView"
-        android:layout_toEndOf="@+id/textViewOdd1"
-        android:gravity="center"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/title_contendentAway"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            />
 
-    <TextView
-        android:id="@+id/textViewOdd2"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
-        tools:text="TextView"
-        android:layout_toEndOf="@+id/textViewOddX"
-        android:gravity="center"/>
+    </LinearLayout>
 
-    </RelativeLayout>
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textview_list_contendentHome"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="18sp"
+            android:gravity="center"
+            tools:text="TextView"
+            />
+
+        <TextView
+            android:id="@+id/textview_list_contendentAway"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="18sp"
+            android:gravity="center"
+            tools:text="TextView"
+            />
+
+
+        <ListView
+            android:id="@+id/ListOdds"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </ListView>
+
+    </LinearLayout>
+</LinearLayout>
