--- a/app/src/main/res/layout/layout_odds_row.xml
+++ b/app/src/main/res/layout/layout_odds_row.xml
@@ -7,91 +7,109 @@
     android:paddingEnd="2sp"
     android:paddingLeft="5sp"
     android:paddingRight="2sp"
-    android:paddingStart="5sp"
+    android:paddingStart="2sp"
     >
 
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:orientation="horizontal">
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        >
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/title_vendor"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:gravity="center"
+
         />
 
     <TextView
         android:id="@+id/textViewVendorName"
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:text="TextView"
+        android:textAlignment="center"
+        android:background="#DA8686"
+        android:gravity="center"
         />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/title_odd1"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:gravity="center"
+
         />
 
     <TextView
         android:id="@+id/textViewOdd1"
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:text="TextView"
+        android:textAlignment="center"
+        android:background="#B8F2EE"
+        android:gravity="center"
         />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/title_oddX"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:gravity="center"
+
         />
 
     <TextView
         android:id="@+id/textViewOddX"
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:text="TextView"
+        android:textAlignment="center"
+        android:background="#B8F2EE"
+        android:gravity="center"
         />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/title_odd2"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:gravity="center"
         />
 
     <TextView
         android:id="@+id/textViewOdd2"
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:text="TextView"
+        android:textAlignment="center"
+        android:background="#B8F2EE"
+        android:gravity="center"
         />
 
 
 </LinearLayout>
 </LinearLayout>
-
