--- a/app/src/main/res/layout/layout_row_view.xml
+++ b/app/src/main/res/layout/layout_row_view.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingEnd="2sp"
     android:paddingLeft="5sp"
-    android:paddingRight="2sp"
+    android:paddingRight="5sp"
     android:paddingStart="5sp"
     >
 
@@ -22,7 +22,7 @@
             android:layout_weight="1"
             android:text="@string/title_contendentHome"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
+            android:textSize="12sp"
             />
 
         <TextView
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:text="@string/title_contendentAway"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
+            android:textSize="12sp"
             />
 
     </LinearLayout>
@@ -39,7 +39,9 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#EFE9B5"
+       >
 
         <TextView
             android:id="@+id/textview_list_contendentHome"
