--- a/app/src/main/res/layout/activity_competitions.xml
+++ b/app/src/main/res/layout/activity_competitions.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.a1061985.weebet.CompetitionsActivity">
 
+
+    <ListView
+        android:id="@+id/listViewCompetitions"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
